# il-bank-validator

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.cfg  validator.py
.github/workflows/: pypi-publish.yml  run-tests.yml
il_bank_validator/: __init__.py  exceptions.py  validator.py
tests/: test_validator.py
