[project]
name = "il-bank-validator"
version = "0.2.2"
description = "Israeli Bank Account Validator based on MASAV rules (May 2025)"
readme = "README.md"
authors = [{ name = "Eliyahu Shteinman" }]
license = {text = "MIT"}
dependencies = []
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/EliShteinman/il-bank-validator"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
