[metadata]
name = il-bank-validator
version = 0.2.0
author = Eliyahu Shteinman
author_url = https://github.com/EliShteinman
description = Israeli Bank Account Validator based on MASAV rules (Dec 2024)
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
project_urls =
    Homepage = https://github.com/EliShteinman
